<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#424242"
    android:gravity="end|center_horizontal"
    tools:context=".MainActivity">

   <TextView
       android:layout_width="wrap_content"
       android:text="@string/result_number"
       android:textSize="72sp"
       android:textColor="#FFC107"
       android:textStyle="bold"
       android:layout_marginEnd="50dp"
       android:layout_marginTop="124dp"
       android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/show_number"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textColor="#F1C541"
        android:layout_marginEnd="50dp"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="66sp"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/ACbutton"
            android:layout_width="wrap_content"
            android:text="@string/Ac"
            android:textColor="#FFC107"
            android:textSize="26sp"
            android:textStyle="bold"
            android:background="424242"
            android:layout_height="62dp"/>
        <Button
            android:id="@+id/plus_and"
            android:layout_width="wrap_content"
            android:text="@string/plus_minus"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_marginStart="22dp"
            android:textColor="@color/white"
            android:background="424242"
            app:layout_constraintLeft_toRightOf="@+id/ACbutton"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/numn"
            android:layout_width="wrap_content"
            android:text="@string/bagimande_icon"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:background="424242"
            android:layout_marginStart="22dp"
            app:layout_constraintLeft_toRightOf="@+id/plus_and"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/seven_number"
            android:layout_width="wrap_content"
            android:text="@string/seven_number"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:background="424242"
            app:layout_constraintTop_toBottomOf="@+id/ACbutton"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/four_number"
            android:layout_width="wrap_content"
            android:text="@string/number_four"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:background="424242"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/seven_number"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/one_number"
            android:layout_width="wrap_content"
            android:text="@string/one_number"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:background="424242"
            app:layout_constraintTop_toBottomOf="@+id/four_number"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/zero_number"
            android:layout_width="wrap_content"
            android:text="@string/zero_number"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:background="424242"
            app:layout_constraintTop_toBottomOf="@+id/one_number"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/eight_number"
            android:layout_width="wrap_content"
            android:text="@string/number_eight"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_marginStart="22dp"
            android:textColor="@color/white"
            android:background="424242"
            app:layout_constraintTop_toBottomOf="@+id/plus_and"
            app:layout_constraintLeft_toRightOf="@+id/seven_number"
            android:layout_marginTop="11dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/five_number"
            android:layout_width="wrap_content"
            android:text="@string/number_five"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:background="424242"
            app:layout_constraintTop_toBottomOf="@+id/eight_number"
            app:layout_constraintLeft_toRightOf="@+id/four_number"
            android:layout_marginTop="13dp"
            android:layout_marginStart="22dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/two_number"
            android:layout_width="wrap_content"
            android:text="@string/number_two"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:background="424242"
            app:layout_constraintTop_toBottomOf="@+id/five_number"
            app:layout_constraintLeft_toRightOf="@+id/one_number"
            android:layout_marginTop="13dp"
            android:layout_marginStart="22dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/.num"
            android:layout_width="wrap_content"
            android:text="@string/nogte_icon"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:background="424242"
            android:layout_marginStart="22dp"
            app:layout_constraintTop_toBottomOf="@+id/two_number"
            app:layout_constraintLeft_toRightOf="@+id/zero_number"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/nine_number"
            android:layout_width="wrap_content"
            android:text="@string/number_nne"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:background="424242"
            android:layout_marginStart="22dp"
            app:layout_constraintTop_toBottomOf="@+id/numn"
            app:layout_constraintLeft_toRightOf="@+id/eight_number"
            android:layout_marginTop="11dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/six_number"
            android:layout_width="wrap_content"
            android:text="@string/number_six"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:background="424242"
            android:layout_marginStart="22dp"
            app:layout_constraintTop_toBottomOf="@+id/nine_number"
            app:layout_constraintLeft_toRightOf="@+id/five_number"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/three_number"
            android:layout_width="wrap_content"
            android:text="@string/number_three"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:background="424242"
            app:layout_constraintTop_toBottomOf="@+id/six_number"
            app:layout_constraintLeft_toRightOf="@+id/two_number"
            android:layout_marginTop="12dp"
            android:layout_marginStart="22dp"
            android:layout_height="wrap_content"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/divide"
            android:layout_width="60dp"
            app:cardElevation="90dp"
            android:layout_marginStart="36dp"
            app:layout_constraintLeft_toRightOf="@+id/numn"
            app:cardCornerRadius="56dp"
            android:layout_height="60dp"
            android:backgroundTint="#CAA639"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="30dp"
                android:background="#C5AA58"
                android:layout_margin="16dp"
                android:src="@drawable/divide_11"
                android:layout_height="30dp"
                android:contentDescription="@string/divide_icon" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/multiplycation"
            android:layout_width="60dp"
            app:cardElevation="90dp"
            android:layout_marginStart="36dp"
            app:layout_constraintLeft_toRightOf="@+id/nine_number"
            app:layout_constraintTop_toBottomOf="@+id/divide"
            app:cardCornerRadius="56dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#CAA639">

            <ImageView
                android:layout_width="30dp"
                android:background="#C5AA58"
                android:layout_margin="16dp"
                android:src="@drawable/multiplication_sign"
                android:layout_height="30dp"
                android:contentDescription="@string/muliti_icon" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/minus"
            android:layout_width="60dp"
            app:cardElevation="90dp"
            android:layout_marginStart="36dp"
            app:layout_constraintLeft_toRightOf="@+id/six_number"
            app:cardCornerRadius="56dp"
            app:layout_constraintTop_toBottomOf="@+id/multiplycation"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#CAA639">

            <ImageView
                android:layout_width="30dp"
                android:background="#C5AA58"
                android:layout_margin="16dp"
                android:src="@drawable/minus1"
                android:layout_height="30dp"
                android:contentDescription="@string/todo2" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/plus"
            android:layout_width="60dp"
            app:cardElevation="90dp"
            android:layout_marginStart="36dp"
            app:layout_constraintLeft_toRightOf="@+id/three_number"
            app:cardCornerRadius="56dp"
            app:layout_constraintTop_toBottomOf="@+id/minus"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#CAA639"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="30dp"
                android:background="#C5AA58"
                android:layout_margin="16dp"
                android:src="@drawable/plus"
                android:layout_height="30dp"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="166dp"
            app:cardElevation="90dp"
            android:layout_marginStart="36dp"
            app:cardCornerRadius="56dp"
            app:layout_constraintTop_toBottomOf="@+id/plus"
            app:layout_constraintLeft_toRightOf="@+id/.num"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#CAA639"
            tools:ignore="MissingConstraints">
            <ImageView
                android:layout_width="30dp"
                android:background="#C5AA58"
                android:layout_marginStart="66dp"
                android:layout_marginTop="14dp"
                android:src="@drawable/equal"
                android:layout_height="30dp"
                android:contentDescription="@string/todo" />


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
